app/assets/stylesheets/application.css
@import url('foundation.css');
@import url('foundation_and_overrides.scss');
@import url('_settings.scss');

a, a:visited {
  color: #FF0022;
}
a:hover {
  color: black;
}
a:active {
  color: #FF0022;
}

 .footer-font {
   font-family: 'Open Sans Condensed', sans-serif;
   font-size: 1rem;
 }
 .skinny-font{
   font-family: 'Amatic SC', cursive;
 }
 .cursive-font, .header-font{
   font-family: 'Shadows Into Light Two', cursive;
 }

 /*.header-font { font-size: 1.3rem;}*/

 header {
   top: 0;
   position: relative;
   height: 10vh;
   display: block;
 }

 nav {
   position: absolute;
 }

 nav li {
   list-style-type: none;
   text-align: center;
   margin-top: 1%;
   padding: 1%;
 }

 li a, .dropbtn {
    display: inline-block;
    text-align: center;
    text-decoration: none;
    font-size: 2.5rem;
}

 .dropdown-content {
   display: none;
   position: absolute;
   text-align: center;
   padding: 1%;
   background-color: #fefefe;
   /*margin: 1%;*/
 }

 .clickable {
   cursor: pointer;
 }

 .dropdown-content a {
   text-decoration: none;
   display: block;
   text-align: center;
   padding: 1%;
   font-size: 2rem;
   /*margin: 1%;*/
 }

li.dropdown {
  display: inline-block;
}

 .dropdown:hover .dropdown-content {
   display: block;
 }

 .search-form {
   margin-top: 1%;
   position: static;
 }

@media screen and (min-width: 64em) {
  main {
   margin-top: 7vh;
   margin-bottom: 6vh;
   display: block;
  }
}

 footer {
  display: block;
  width: 100%;
  border-top: 1px solid black;
  margin-top: 5vh;
  background-color: #fefefe;
  color: black;
  vertical-align: middle;
  font-weight: 200;
  text-align: center;
  position: fixed;
  bottom: 0;
  clear: both;
  font-size: .8rem;
 }

 .button {
   background-color: #dae5e8;
   color: black;
 }

 .button:hover {
   background-color: #272D2D;
   color: #dae5e8;
 }

#favorite {
  text-align: center;
  padding-left: 1%;
  padding-right: 1%;

}

 .tabs {
   float: left;
   display: block;
   font-family: 'Inconsolata', monospace;
   font-size: 1.2rem;
   overflow: scroll;
   height: 70vh;
   padding: 0;
 }

.chords {
  float: right;
  display: block;
}

@media screen and (max-width: 768px) {
  main {
    margin-top: 2vh;
  }
}

.hidden {
  display: none;
}

